sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/BSF_Finishing__c.object-meta.xml
<CustomObject>
    <label>BSF Finishing</label>
    <nameField>
        <label>BSF Finishing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BSF Finishing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>