sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/fields/Dead_Flies_KG__c.field-meta.xml
<CustomField>
    <fullName>Dead_Flies_KG__c</fullName>
    <label>Dead Flies(KG)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>