sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/fields/Exo_Skeletons__c.field-meta.xml
<CustomField>
    <fullName>Exo_Skeletons__c</fullName>
    <label>Exo Skeletons(KG)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>