sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/fields/Final_Product_Residue_KG__c.field-meta.xml
<CustomField>
    <fullName>Final_Product_Residue_KG__c</fullName>
    <label>Final Product Residue (KG)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>