sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/fields/Larvae_After_drying_and_processing_KG__c.field-meta.xml
<CustomField>
    <fullName>Larvae_After_drying_and_processing_KG__c</fullName>
    <label>Larvae After drying and processing (KG)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>