sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/fields/Total_Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_KG__c</fullName>
    <label>Total Weight(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>