sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/fields/Wet_Mature_Larvae__c.field-meta.xml
<CustomField>
    <fullName>Wet_Mature_Larvae__c</fullName>
    <label>Wet Mature Larvae</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>