sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/recordTypes/BSF_Finishing_Input.recordType-meta.xml
<RecordType>
    <fullName>BSF_Finishing_Input</fullName>
    <active>true</active>
    <label>BSF Finishing Input</label>
</RecordType>