sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/recordTypes/BSF_Finishing_Output_Final_Processing.recordType-meta.xml
<RecordType>
    <fullName>BSF_Finishing_Output_Final_Processing</fullName>
    <active>true</active>
    <label>BSF Finishing Output(Final Processing)</label>
</RecordType>