sfSandBoxCode/force-app/main/default/objects/BSF_Finishing__c/recordTypes/BSF_Finishing_Output_Post_Drying.recordType-meta.xml
<RecordType>
    <fullName>BSF_Finishing_Output_Post_Drying</fullName>
    <active>true</active>
    <label>BSF Finishing Output(Post Drying)</label>
</RecordType>